--- a/app/src/main/res/layout/recycler_item_girl_imge.xml
+++ b/app/src/main/res/layout/recycler_item_girl_imge.xml
@@ -22,7 +22,7 @@
     >
 
     <ImageView
-        android:id="@+id/girl_image"
+        android:id="@+id/exciting_pic"
         android:layout_width="match_parent"
         android:layout_height="303dp"
         />
