--- a/app/src/main/res/layout/content_search.xml
+++ b/app/src/main/res/layout/content_search.xml
@@ -17,23 +17,23 @@
  */-->
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <!--
-     wrap SwipeRefreshLayout in FrameLayout to fix this issue
-     switch fragment with SwipeRefreshLayout during refreshing, fragment freezes but actually still work.
-    -->
+    android:layout_height="match_parent"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/refresh_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/recycler_view"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        />
-        </android.support.v4.widget.SwipeRefreshLayout>
-
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+    <TextView
+        android:id="@+id/empty_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/query_empty"
+        android:visibility="invisible"
+        style="@style/TitleTextAppearance"/>
 
 </FrameLayout>
