--- a/app/src/main/res/layout/recycler_item_today_girl_imge.xml
+++ b/app/src/main/res/layout/recycler_item_today_girl_imge.xml
@@ -22,6 +22,6 @@
     <ImageView
         android:id="@+id/pic"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="303dp"
         />
 </FrameLayout>
